# materforge

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  AUTHORS.txt  CHANGELOG.md  CITATION.cff  CMakePresets.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  add_headers.sh  gpu.sh  lumi.sh  pyproject.toml  sync-repos.sh  update-docs.sh
.github/workflows/: ci.yml
apps/: 1.4301_HeatEquationKernelWithMaterial.yaml  1.4301_HeatEquationKernelWithMaterialBM.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CodegenHeatEquationCPUScaling.cpp  CodegenHeatEquationGPUScaling.cpp  CodegenHeatEquationWithMaterial.cpp  CodegenHeatEquationWithMaterialCPU.cpp  CodegenHeatEquationWithMaterialGPU.cpp  Couette.prm  CouetteFlow.cpp  CouetteFlowCPUScaling.cpp  CouetteFlowGPUScaling.cpp  CouetteFlowKernel.py  CouetteFlowMaterial.yaml  CouetteFlowMaterial_Updated.yaml  CouetteFlowScaling.cpp  CouetteFlowScaling.prm  CouetteFlowSimulation.cpp  CouetteFlowSweeps.py  CouetteFlowSweepsGPU.py  CouetteScaling.prm  HeatEquationKernelWithMaterial.py  HeatEquationKernelWithMaterialCPU.py  HeatEquationKernelWithMaterialGPU.py  LICENSE  README.md  build_validation_binaries.sh  cf_cpu_WMB.sh  cf_cpu_WMB_1.sh  compute_analytical_couette.py  couette_performance_analysis.md  extract_vtk_profiles.py  generate_performance_plots.py  generate_plots.py  generate_pycallgraph2_images.py  material_demo_callgraph.py  parse_scaling.py  plot_material_demo.py  (+9 more)
apps/CouetteFlow/: CouetteFlow.cpp  CouetteFlow.py  configure.py
apps/CouetteFlow/params/: CouetteFlow.prm  CouetteFlow.yaml
apps/cmake/: check_python_packages.py
apps/scripts/: build_validation_binaries.sh  extract_vtk_profiles.py  generate_performance_plots.py  generate_validation_plots.py  parse_scaling.py  plot_material_demo.py  plot_scaling.py  run_likwid_cache.sh  run_perf_cache.sh  run_perf_const.sh  run_perf_srt.sh  run_perf_tempdep.sh  run_perf_trt.sh  run_strong_scaling.sh  run_validation.sh  run_validation_array.sh
benchmarking-scripts/materforge/CouetteFlow/lumi-g/: build.sh  run_single_node.sh  run_strong_scaling.sh  run_weak_scaling.sh
benchmarking-scripts/materforge/HeatEquation/lumi-c/: README.md  build_materforge.sh  run_materforge_single_node.sh  run_materforge_single_node_128.sh  run_materforge_single_node_256.sh  run_materforge_strong_scaling_large.sh  run_materforge_strong_scaling_medium.sh  run_materforge_strong_scaling_small.sh  run_materforge_weak_scaling.sh
benchmarking-scripts/materforge/HeatEquation/lumi-g/: build_materforge.sh  run_materforge_single_node.sh  run_materforge_strong_scaling_large.sh  run_materforge_strong_scaling_medium.sh  run_materforge_strong_scaling_small.sh  run_materforge_weak_scaling.sh
docs/: conf.py  index.rst  requirements.txt
docs/explanation/: design_philosophy.md  material_properties.md
docs/how-to/: define_materials.md  energy_temperature_conversion.md  load_bundled_materials.md  property_inversion.md  use_the_cli.md
docs/reference/: api.rst  yaml_schema.md
docs/reference/api/: material.md
docs/tutorials/: first_simulation.md  getting_started.md
examples/: __init__.py  material_properties_demo.py  modular_demo.py  myAlloy.csv  myAlloy.py  myAlloy.yaml  test_multi_dep.py  test_sudo_mul_dep.py
paper/: paper.bib  paper.md
scripts/: sync-repos.sh  update-docs.sh
src/materforge/: __init__.py  catalog.py  cli.py
src/materforge/algorithms/: __init__.py  interpolation.py  piecewise_builder.py  piecewise_inverter.py  regression_processor.py
src/materforge/core/: __init__.py  elements.py  exceptions.py  materials.py  symbol_registry.py
src/materforge/data/: __init__.py
src/materforge/data/constants/: __init__.py  physical_constants.py  processing_constants.py
src/materforge/data/elements/: __init__.py  element_data.py
src/materforge/data/materials/: 1.4301.yaml  Al.yaml  Al2O3.yaml  __init__.py
src/materforge/parsing/: __init__.py  api.py
src/materforge/parsing/config/: __init__.py  material_yaml_parser.py  yaml_keys.py
src/materforge/parsing/io/: __init__.py  data_handler.py
src/materforge/parsing/processors/: __init__.py  computed_property_processor.py  dependency_processor.py  dependency_resolver.py  post_processor.py  property_handlers.py  property_processor.py  property_processor_base.py  temperature_resolver.py
src/materforge/parsing/utils/: __init__.py  utilities.py
src/materforge/parsing/validation/: __init__.py  array_validator.py  errors.py  property_type_detector.py  property_validator.py
src/materforge/visualization/: __init__.py  plotters.py
src/pymatlib/algorithms/: piecewise_builder.py
src/pymatlib/core/: materials.py
src/pymatlib/parsing/: __init__.py  api.py
src/pymatlib/visualization/: plotters.py
tests/: Al.yaml  SS.yaml  conftest.py
tests/integration/: test_end_to_end.py  test_imports.py  test_material_creation.py  test_yaml_material_creation.py
tests/performance/: test_benchmarks.py
tests/regression/: test_regression_suits.py
tests/unit/: test_catalog.py  test_cli.py
tests/unit/test_algorithms/: test_interpolation.py  test_interpolation_edge_cases.py  test_inverse.py  test_inverse_1.py  test_inversion.py  test_piecewise_builder.py  test_piecewise_inverter_comprehensive.py  test_regression_processor.py
tests/unit/test_core/: test_elements.py  test_materials.py  test_symbol_registry.py
tests/unit/test_data/: test_constants.py  test_element_data.py
tests/unit/test_parsing/: test_api.py  test_computed_property_processor.py  test_data_handler.py  test_dependency_processor.py  test_dependency_resolver.py  test_dependency_resolver_edge_cases.py  test_post_processor.py  test_property_handlers.py  test_property_processor_base.py  test_property_type_detector.py  test_temperature_resolver.py  test_temperature_resolver_edge_cases.py  test_utilities_comprehensive.py  test_yaml_parser.py
tests/unit/test_validation/: test_array_validator.py  test_property_validator.py  test_validation_functions.py
tests/unit/test_visualization/: test_plotters.py  test_plotters_error_handling.py
(+18 files in other folders)
