[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "materforge"
dynamic = ["version"]
description = "A high-performance Python library for material simulation and analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rahil Doshi", email = "rahil.doshi@fau.de"},
]
maintainers = [
    {name = "Rahil Doshi", email = "rahil.doshi@fau.de"},
]
keywords = ["materials", "thermophysical", "properties", "yaml", "scientific-computing", "piecewise", "regression", "sympy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0,<3.0.0",
    "sympy>=1.9.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "ruamel.yaml>=0.17.0,<1.0.0",
    "pandas>=1.4.0,<3.0.0",
    "openpyxl>=3.1.5",
    "pwlf>=2.5.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.0.0",
    "pytest-benchmark>=4.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "sphinx-autodoc-typehints>=1.20.0",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py>=0.7.1",
]
performance = [
    "line_profiler>=4.0.0",
    "memory_profiler>=0.60.0",
    "pytest-benchmark>=4.0.0",
]
simulation = [
    "pystencils>=1.3.0",
]
all = [
    "materforge[dev,test,docs,performance,simulation]"
]

[project.urls]
Homepage = "https://github.com/rahildoshi97/materforge"
Repository = "https://github.com/rahildoshi97/materforge"
"Bug Tracker" = "https://github.com/rahildoshi97/materforge/issues"
Documentation = "https://materforge.readthedocs.io"
Changelog = "https://github.com/rahildoshi97/materforge/blob/main/CHANGELOG.md"
"GitLab Mirror" = "https://i10git.cs.fau.de/rahil.doshi/materforge"

[project.scripts]
materforge-validate = "materforge.parsing.api:validate_yaml_file"

[tool.setuptools.packages.find]
where = ["src"]
include = ["materforge*"]
exclude = ["tests*", "apps*", "examples*"]

[tool.setuptools.package-data]
materforge = [
    "data/**/*",
    "data/alloys/**/*",
    "data/pure_metals/**/*",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.xlsx",
    "*.csv",
    "*.txt",
    "py.typed",
]

[tool.setuptools_scm]
write_to = "src/materforge/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
fallback_version = "0.5.8"
